# chess_analysis

./: .gitignore  ALERTS_MIGRATION.md  CLAUDE.md  README.md  backend.tf  chess_analysis.ipynb  chess_analysis_v2.ipynb  chess_ingestion.ipynb  gcs_chess_ingestion.ipynb  main.py  main.tf  providers.tf  pyproject.toml  requirements.txt  terraform.tfvars  variables.tf
.github/workflows/: terraform.yml
alerts_lib/: README.md  pyproject.toml
alerts_lib/alerts_lib/: __init__.py  alerts.py
archive/: chess_analysis_v1.ipynb  chess_analysis_v2.ipynb
bigquery/sql/aggregate/: monthly_chess_player_openings.sql
bigquery/sql/monitoring/: bq_usage.sql
cloud_run/vm_initialiser/: main.py  requirements.txt
dash/: chess_dash.py
dash/assets/: styles.css
dash/bq_monitor/: bq_monitor.py
dash/bq_monitor/assets/: styles.css
dash/bq_monitor/gcloud/: run_dash_application
dash/bq_monitor/sandbox/: game_test.csv  query_on_call_back.py
dash/chess_app/: chess_dash.py  main.py
dash/chess_app/sandbox/: chess_dash_sandboxing.py
dash/sand_chess_app/assets/: styles.css
data/: .~lock.chess_data.xlsx#  accuracy_manual_fixing_checklist.xlsx  accuracy_nan_url.csv  chess_data.xlsx
dbt-pipeline/: pyproject.toml
dbt/dots/: README.md  profiles.yml
dbt/draft_unit_test/: test_stg_weekly_player_agg.sql  test_weekly_total_agg.sql
dbt/pipeline/: README.md  dbt_project.yml
dbt/pipeline/macros/: sql_macros.sql
dbt/pipeline/models/: schema.yml
diagrams/architecture/: .$chess_pipeline_architecture.drawio.bkp  chess_pipeline_architecture.drawio  end_to_end_vm_pipeline.excalidraw
docker/: Dockerfile  docker_start_up  variables
docker/bq_monitor/: Dockerfile  variables
docker/chess_app/: Dockerfile  variables
docker/chess_bigquery_loader/: Dockerfile  variables
docker/chess_gcs_ingestion/: Dockerfile  variables
docker/chess_ingestion_processor/: Dockerfile  container_failed_logs  variables
docker/dash_bq_monitor/: Dockerfile  variables
docker/gcs_pull/: Dockerfile  download_gcs_scripts.sh
docker/gcs_python_executor/: Dockerfile  decode_test.sh  download_and_run.sh  test_docker_run  variables
docker/test_pubsub/: Dockerfile  variables
docker/vm_deleter/: Dockerfile  variables
docker/vm_initialiser/: Dockerfile  variables
docker/vm_starter/: Dockerfile  deploy_image_to_artifact_registry  variables
docs/: GCP_COMMON_MIGRATION.md  LIBRARY_ARCHITECTURE.md
docs/diagrams/architecture/: chess_pipeline_architecture.drawio  vm_workload_cycle_new_centralised.excalidraw  vm_workload_cycle_old.excalidraw
functions/: bq_func.py  gcs_adhoc.py  gcs_func.py  gcs_ingestion.py  general_func.py  ingestion_func.py  shared.py  shared_func.py  transform_func.py
inputs/: bq_load_settings.json  gcs_ingestion_settings.json
libs/: README.md
libs/alerts/: README.md  __init__.py  alerts.py  pyproject.toml
libs/chess_ingestion/: __init__.py  chess_ingestion.py  pyproject.toml
libs/chess_transform/: __init__.py  chess_transform.py  pyproject.toml
libs/gcp_common/: README.md  __init__.py  gcp_common.py  pyproject.toml
networking/: nat_config
scripts/: alert_test.py  bigquery_chess_transform_load.py  biquery_chess_transform_load.py  debug.py  example_alerts_usage.py  gcs_chess_ingestion.ipynb  gcs_chess_ingestion.py  gcs_chess_ingestion_dlt.py  gcs_object_append_prefix.ipynb  requirements.txt  test_alert.py  test_disc_hook.py  test_email_alert.py  test_pub_sub_message.py  vm_ingest_init
scripts/__marimo__/session/: biquery_chess_transform_load.py.json  gcs_chess_ingestion.py.json
scripts/bigquery/aggregate/: month_chess_player_openings.sql  monthly_chess_openings.sql  monthly_player_games.sql
scripts/bigquery/sql/: opening_agg.sql  player_monthly_agg.sql
scripts/bigquery/staging/: monthly_player_games.sql  player_games.sql
scripts/bigquery/universal/: calendar.sql
scripts/cloud_functions/: pyproject.toml  requirements.txt  vm_start.ipynb
scripts/cloud_functions/vm_delete/: main.py  (+1 more)
scripts/cloud_scheduler_json/: bigquery_chess_transform_load.json  gcs_chess_ingestion.json  gcs_chess_ingestion_dlt.json  test_alert.json  test_email_alert.json  test_pub_sub_message.json
scripts/functions/: alerts_func.py  bq_func.py  gcs_func.py  ingestion_func.py  shared_func.py  transform_func.py
scripts/gcloud/: bq_monitor_policy_binding  cloud_router  rsync_to_gcs
scripts/inputs/: gcs_ingestion_settings.json
shell/: make_principle_set_policy_binding  rsync_to_gcs
xlsx_data/: chess_data.xlsx
(+26 files in other folders)
