[project]
name = "chess-analysis"
version = "0.1.0"
description = "Python dependancies to execute chess ingestion pipeline against GCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alerts-lib",
    "dash>=3.0.2",
    "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=2.0.1",
    "google-api-python-client>=2.166.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.31.0",
    "google-cloud-bigquery-storage>=2.30.0",
    "google-cloud-logging>=3.11.4",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=3.1.0",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "marimo>=0.11.30",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pandas-gbq>=0.28.0",
    "pyarrow>=19.0.1",
    "pygments>=2.19.1",
    "scipy>=1.16.0",
]

[tool.uv.sources]
alerts-lib = { path = "./alerts_lib", editable = true }

[tool.uv.workspace]
members = [
    "dbt-pipeline",
]
