[project]
name = "alerts-lib"
version = "0.1.0"
description = "Chess Pipeline Alerting Library for Email, Discord, and BigQuery notifications"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.31.0",
    "pygments>=2.19.1",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-bigquery>=3.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
