[project]
name = "dbt-pipeline"
version = "0.1.0"
description = "Managing SQL Transforms"
requires-python = ">=3.11"
dependencies = [
    "dbt>=1.0.0.40.1",
    "google-api-python-client>=2.169.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.32.0",
    "google-cloud-logging>=3.12.1",
    "pyarrow>=20.0.0",
]
